Fixed bug #48359 (Script hangs on snmprealwalk if OID is not increasing)

# Original patch by simonov at gmail dot com